--- a/css/media.css
+++ b/css/media.css
@@ -4,12 +4,31 @@
 		max-width: 980px;
 	}
 
-	.services__item {
-	    max-width: 290px;
-	}
-
 	.form__inner {
 		background-image: none;
+	}
+
+	.services__items{
+		flex-direction: column;
+	}
+
+	.services__item{
+		max-width: 100%;
+    	min-height: 325px;
+    	margin-bottom: 20px;
+	}
+
+	.advantages__inner{
+		flex-direction: column;
+	}
+
+	.advantages__item{
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+
+	.advantages__item:not(:last-child){
+		padding-bottom: 50px;
 	}
 
 	.news {
@@ -39,11 +58,20 @@
 	}
 
 	.news__blog-text {
-	padding-left: 310px;
+		padding-left: 310px;
+	}
+
+	.footer__inner{
+    	flex-direction: column;		
+	}
+
+	.footer__map {
+	    padding-top: 30px;
+	    max-width: 100%;
 	}
 
 	.footer__map iframe{
-		max-width: 600px;
+		width: 100%;
 	}
 
 }
@@ -51,36 +79,9 @@
 
 @media (max-width: 768px) {
 
-	.form__box-right{
+/*	.form__box-right{
 		max-width: 445px;
-	}
-
-	.services__items{
-		flex-direction: column;
-	}
-
-	.services__item{
-		max-width: 100%;
-    	min-height: 325px;
-    	margin-bottom: 20px;
-	}
-
-	.advantages__inner{
-		flex-direction: column;
-	}
-
-	.advantages__item{
-		padding-left: 100px;
-		padding-right: 100px;
-	}
-
-	.advantages__item:not(:last-child){
-		padding-bottom: 50px;
-	}
-
-	.footer__map iframe{
-		max-width: 400px;
-	}
+	}*/
 
 }
 
@@ -125,9 +126,9 @@
 	}
 
 	.header__content {
-    	padding: 14px 0px 0px;
+    	padding: 24px 0px 14px;
     	position: relative;
- 	}
+  }
 
  	.slick-btn{
  		display: none !important;
@@ -208,8 +209,12 @@
 	    align-items: center;
 	}
 
-	.form__box-right {
+	.form__box-left, .form__box-right{
 	    max-width: 260px;
+	    width: 100%;
+	}
+
+	.form__box-right {
 		margin-top: 10px;
 	}
 
@@ -237,15 +242,6 @@
 
 	.news__images img{
 		width: 100%;
-	}
-
-	.footer__inner{
-		display: block;
-	}
-
-	.footer__map iframe{
-		max-width: 100%;
-		margin-top: 30px;
 	}
 
 	.footer__title {
